welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:6: error: not found: value DIRECTION
		if(getDirection()==DIRECTION.OUEST){
                                   ^SnakeBuggle:19: error: value unary_! is not a member of Unit
while(!methode){
      ^